--- a/src/index.scss
+++ b/src/index.scss
@@ -20,13 +20,12 @@ body {
     width: 100%;
     height: 100%;
 
-    .background_blur {
+    .background {
       position: absolute;
       top: 0;
       right: 0;
       bottom: 0;
       left: 0;
-      background-image: url('./assets/summer-bg.jpg');
       background-size: cover;
       background-attachment: fixed;
       filter: blur(5px);
@@ -79,7 +78,6 @@ body {
           .sun {
             width: 4rem;
             height: 4rem;
-            background-image: url('./assets/icons/sun.svg');
             background-size: cover;
           }
         }
@@ -89,7 +87,6 @@ body {
           .rain {
             width: 4rem;
             height: 4rem;
-            background-image: url('./assets/icons/cloud-rain.svg');
             background-size: cover;
           }
         }
@@ -99,7 +96,6 @@ body {
           .snow {
             width: 4rem;
             height: 4rem;
-            background-image: url('./assets/icons/cloud-snow.svg');
             background-size: cover;
           }
         }
